.vscode/allianceuat_compare/force-app/main/default/objects/nuuco_ATO_Laundry_Allowance__c/nuuco_ATO_Laundry_Allowance__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ALN-343 - Holds configuration values for laundry allowance processing according to ATO guidelines. Includes daily and weekly non-taxable thresholds, and associated pay codes for taxable and non-taxable allowances by uniform type. Used by automation to correctly split Timesheet and Pay Transaction amounts.</description>
    <label>nuuco ATO Laundry Allowance</label>
</CustomObject>