.vscode/allianceuat_compare/force-app/main/default/objects/nuuco_ATO_Laundry_Allowance__c/fields/Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Limit__c</fullName>
    <description>Maximum non-taxable laundry allowance allowed per day, in dollars.</description>
    <label>Daily Limit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>