.vscode/allianceuat_compare/force-app/main/default/objects/nuuco_ATO_Laundry_Allowance__c/fields/Non_Taxable_Paycode_Uniform__c.field-meta.xml
<CustomField>
    <fullName>Non_Taxable_Paycode_Uniform__c</fullName>
    <description>Pay code to assign for non-taxable laundry allowance for uniform payee.</description>
    <inlineHelpText>Pay code to assign for non-taxable laundry allowance for uniform payee.</inlineHelpText>
    <label>Non-Taxable Paycode (Uniform)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>