.vscode/allianceuat_compare/force-app/main/default/objects/nuuco_ATO_Laundry_Allowance__c/fields/NonTaxable_NonUniform_Paycode_c__c.field-meta.xml
<CustomField>
    <fullName>NonTaxable_NonUniform_Paycode_c__c</fullName>
    <description>Pay code to assign for non-taxable laundry allowance for non-uniform payee.</description>
    <inlineHelpText>Pay code to assign for non-taxable laundry allowance for non-uniform payee.</inlineHelpText>
    <label>NonTaxable Paycode (Non-Uniform)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>