.vscode/allianceuat_compare/force-app/main/default/objects/nuuco_ATO_Laundry_Allowance__c/fields/Taxable_Paycode_Uniform__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Paycode_Uniform__c</fullName>
    <description>Pay code to assign for taxable laundry allowance for a uniform payee</description>
    <inlineHelpText>Pay code to assign for taxable laundry allowance for a uniform payee</inlineHelpText>
    <label>Taxable Paycode (Uniform)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>