.vscode/allianceuat_compare/force-app/main/default/objects/nuuco_ATO_Laundry_Allowance__c/fields/Weekly_Limit__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Limit__c</fullName>
    <description>Maximum cumulative non-taxable laundry allowance allowed per pay week, in dollars.</description>
    <inlineHelpText>Maximum cumulative non-taxable laundry allowance allowed per pay week, in dollars.</inlineHelpText>
    <label>Weekly Limit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>